# 2-DOF-Serial-Manipulator-angle-finder

./: CMakeLists.txt
src/: MathHelper.h
src/datatypes/: angle.h  anglePair.h  target.h
src/geometricSolver/: geometricSolver.c  geometricSolver.h
